--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,9 +1,14 @@
 apply plugin: 'com.android.application'
 
 android {
+    signingConfigs {
+        config {
+            storeFile file('E:/Stuff/android/BlackList/key.jks')
+            keyAlias 'alias'
+        }
+    }
     compileSdkVersion 22
     buildToolsVersion "23.0.0 rc2"
-
     defaultConfig {
         applicationId "com.blacklist.start.blacklist"
         minSdkVersion 15
@@ -20,6 +25,6 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:22.2.0'
 }
